# trait-weaver-NLP

./: .gitignore  README.md  main.py  pyproject.toml
aux_data/: traits_geq_oneGenAssoc.pkl
notebooks/: 0_disease_ot.ipynb  0_interesting_traits.ipynb  1_NLP_embeddings.ipynb  1_embedding_distances.ipynb  2_NLP_vs_EFO.ipynb
output/: id_value_embeddings.parquet  trait_trait_edges_0_25.pkl
scripts/: compute_embeddings.py  compute_embeddings_full.py  compute_embeddings_qwen.py  get_data.sh  get_models.py
src/: network.py  nlp_embeddings.py
src/trait_weaver_nlp/: nlp_embeddings.py
