[project]
name = "trait-weaver-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "polars>=1.39.3",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.1",
]
